apps/consumer/deployment/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer
    app.kubernetes.io/part-of: spring-openfeign-demo
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
        app.kubernetes.io/part-of: spring-openfeign-demo
    spec:
      containers:
        - image: spring-openfeign-demo-consumer:0.0.1-SNAPSHOT
          name: consumer
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    app.kubernetes.io/part-of: spring-openfeign-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: consumer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-openfeign-demo-ingress
  labels:
    app.kubernetes.io/part-of: spring-openfeign-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "consumer.spring-openfeign-demo.k8s"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: consumer
                port:
                  number: 80
